Query schema started

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 
-rootProject.name=ratpack-graphql
-
+assertj_version=3.6.2
+graphql_annotations_version=0.13.1
 junit_plugin_version=1.0.0-M4
 ratpack_version=1.5.0-rc-2
