--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,10 @@ repositories {
 }
 
 dependencies {
-    testImplementation 'junit:junit:4.12'
+    compile 'com.graphql-java:graphql-java-annotations:' + graphql_annotations_version
+    testImplementation 'junit:junit:4.12',
+            'org.assertj:assertj-core:' + assertj_version
+    testRuntime "org.junit.vintage:junit-vintage-engine:4.12.0-M4"
 }
 
 group = 'com.github.nwillc'
