Cleaning and bringing up to date

--- a/build.gradle
+++ b/build.gradle
@@ -1,32 +1,25 @@
 
-buildscript {
-    repositories {
-        jcenter()
-    }
-    dependencies {
-        classpath 'org.junit.platform:junit-platform-gradle-plugin:' + junit_plugin_version
-    }
-}
-
 plugins {
     id 'java'
     id 'application'
-    id "io.ratpack.ratpack-java" version "1.5.0-rc-2"
 }
-
-apply plugin: 'org.junit.platform.gradle.plugin'
 
 repositories {
     jcenter()
 }
 
 dependencies {
-    compile 'com.graphql-java:graphql-java-annotations:' + graphql_annotations_version
-    testRuntime "org.junit.vintage:junit-vintage-engine:4.12.0-M4"
+    compile "com.graphql-java:graphql-java-annotations:$graphql_version",
+            "io.ratpack:ratpack-core:$ratpack_version",
+            "com.graphql-java:graphql-java-annotations:$graphql_version",
+            "org.tinylog:tinylog:$tiny_log_version"
+
+    runtime "org.tinylog:slf4j-binding:$slf4j_version"
 }
 
 group = 'com.github.nwillc'
-version = '0.0.1-SNAPSHOT'
+version = '0.0.2-SNAPSHOT'
 targetCompatibility = '1.8'
 sourceCompatibility = '1.8'
 mainClassName = 'com.github.nwillc.rpgraphql.Application'
+
