--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,5 @@
 
-graphql_annotations_version=0.13.1
-junit_plugin_version=1.0.0-M4
-ratpack_version=1.5.0-rc-2
+graphql_version=3.0.3
+ratpack_version=1.5.0
+tiny_log_version=1.2
+slf4j_version=1.2
