--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,7 @@
 
-graphql_version=3.0.3
+assertj_version=3.8.0
+junit_version=4.12
+graphql_version=6.0
 ratpack_version=1.5.0
 tiny_log_version=1.2
 slf4j_version=1.2
